# llm-news

./: .env.example  .gitignore  README.md  _config.yml  config.yaml  index.html  index.md  prd.md  pyproject.toml
.github/workflows/: daily.yml
2026-02-08/: index.html  index.md
2026-02-09/: index.md
2026-02-10/: index.md
2026-02-11/: index.md
2026-02-12/: index.md
2026-02-14/: index.md
data/: history.json
src/llm_news/: __init__.py  __main__.py  config.py  dedup.py  main.py  models.py  output.py  pages.py  processor.py  push.py  tts.py
src/llm_news/collectors/: __init__.py  arxiv_collector.py  base.py  blog_collector.py  github_collector.py  github_trending_collector.py  hackernews_collector.py  hf_models_collector.py  hf_papers_collector.py  pwc_collector.py  reddit_collector.py  twitter_collector.py
tests/: test_dedup.py
