[project]
name = "llm-news"
version = "0.1.0"
description = "Daily LLM news aggregator with audio broadcast"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "arxiv>=2.1",
    "praw>=7.7",
    "feedparser>=6.0",
    "openai>=1.0",
    "edge-tts>=6.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
llm-news = "llm_news.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_news"]
